--- a/index.html
+++ b/index.html
@@ -23,13 +23,10 @@
     <section class="hero">
         <img src="sustainable.jpg" alt="Sustainable" class="hero-image">
         <div class="hero-text-box">
-            <h1>Sustainable Supercomputing: Your code is part of the problem but you can be part of the solution.</h1>
+            <h1>Calculate the environmental impact of your supercomputer project!</h1>
             <p>Only because your code runs in the cloud doesn't mean that your code doesn't affect the earth. 
-                By 2030, 20% of the world's electricity is expected to be consumed by internet and communication technology.<sup><a href="https://pisrt.org/psr-press/journals/easl-vol-3-issue-2-2020/new-perspectives-on-internet-electricity-use-in-2030/">1</a></sup>
-		<br><br>
-		Our environmental impact calculator works by taking inputs (Processor time spent (hours), Type of node, Total data generated (GiB), Total duration of project (days)) and calaulates the energy used and emissions emitted by running such code on SURF's supercomputer (Snellius). 
-		We aim to make users of Snellius more aware of the impact of running their code and encourage them to write more efficient code by giving them tips (best practices). If you are a researcher or programmer and wish to learn more about code efficiency and supercomputing environmental impact, 
-		feel free to use our impact calculator and read our best practices guide.  
+                By 2030, 20% of the world's electricity is expected to be consumed by internet and communication technology.<sup><a href="https://pisrt.org/psr-press/journals/easl-vol-3-issue-2-2020/new-perspectives-on-internet-electricity-use-in-2030/">1</a></sup> <br>You should optimise your code and reduce your carbon footprint.
+		
             </p>
         </div>
 
@@ -55,7 +52,9 @@
             <div class="tile">
                 <img src="img/book.png" alt="Book Icon" class="centered-icon">
                 <h2>What can we do?</h2>
-                <p>Addressing these inefficiencies requires better software development practices. By teaching you and other researchers about writing efficient code and encouraging you to write such code, the full potential of supercomputing resources can be unlocked, leading to further advancements in scientific research, technological development, and complex problem-solving all while reducing the growing impact of HPC on the environment.</p>
+                Our environmental impact calculator works by taking inputs (Processor time spent (hours), Type of node, Total data generated (GiB), Total duration of project (days)) and calaulates the energy used and emissions emitted by running such code on SURF's supercomputer (Snellius). 
+		We aim to make users of Snellius more aware of the impact of running their code and encourage them to write more efficient code by giving them tips (best practices). If you are a researcher or programmer and wish to learn more about code efficiency and supercomputing environmental impact, 
+		feel free to use our impact calculator and read our best practices guide.  
             </div>
         </div>
         <div class="about-section">
