typos, add paragraph style

--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
             <div class="overlay"></div>
             <div class="tile">
                 <img src="img/power2.png" alt="Lightning Icon" class="invert-colors centered-icon">
-                <h2>What is Inefficient Supercomputing?</h2>
+                <h2>What is inefficient supercomputing?</h2>
                 <p>Inefficient supercomputing means not using high-performance computing (HPC) resources properly and efficiently. This inefficiency can arise from various factors, including poorly optimized software, inadequate hardware configurations, or ineffective resource management. We are focusing on poorly optimised software here. </p>
             </div>
             <div class="tile">
                 <img src="img/drop.png" alt="Drop Icon" class="centered-icon">
-                <h2>What are the Consequences of Inefficient Supercomputing?</h2>
+                <h2>What are the consequences of inefficient supercomputing?</h2>
                 <p>Running inefficient code on supercomputers will lead to software bottlenecks resulting in slowed processing speed and wasted resources. Electricity and water consumption will increase as more power is needed to chew through inefficient code and more water is required to cool the hot powerful hardware. Bad code may also have hardware utilization, resource allocation, and scalability issues leading to improper use of the hardware based on what the program needs. </p>
             </div>
             <div class="tile">
                 <img src="img/book.png" alt="Book Icon" class="centered-icon">
                 <h2>What can we do?</h2>
-                Our environmental impact calculator works by taking inputs (Processor time spent (hours), Type of node, Total data generated (GiB), Total duration of project (days)) and calaulates the energy used and emissions emitted by running such code on SURF's supercomputer (Snellius). 
+                <p>Our environmental impact calculator works by taking inputs (Processor time spent (hours), Type of node, Total data generated (GiB), Total duration of project (days)) and calaulates the energy used and emissions emitted by running such code on SURF's supercomputer (Snellius). 
 		We aim to make users of Snellius more aware of the impact of running their code and encourage them to write more efficient code by giving them tips (best practices). If you are a researcher or programmer and wish to learn more about code efficiency and supercomputing environmental impact, 
-		feel free to use our impact calculator and read our best practices guide.  
+		feel free to use our impact calculator and read our best practices guide.</p> 
             </div>
         </div>
         <div class="about-section">
